--- a/bloque1.html
+++ b/bloque1.html
@@ -62,23 +62,23 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/bloque1/imagen1.jpg" width="250" height="250" alt="First slide">
+                    <img class="d-block w-100" src="./img/Bloque1/imagen1.jpg" width="250" height="250" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque1/imagen2.jpg" width="250" height="250"
+                    <img class="d-block w-100" src="./img/Bloque1/imagen2.jpg" width="250" height="250"
                         alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque1/imagen3.jpg" width="250" height="250" alt="Third slide">
+                    <img class="d-block w-100" src="./img/Bloque1/imagen3.jpg" width="250" height="250" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque1/imagen4.jpg" width="250" height="250" alt="four slide">
+                    <img class="d-block w-100" src="./img/Bloque1/imagen4.jpg" width="250" height="250" alt="four slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque1/imagen5.jpg" width="250" height="250" alt="five slide">
+                    <img class="d-block w-100" src="./img/Bloque1/imagen5.jpg" width="250" height="250" alt="five slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque1/imagen6.jpg" width="250" height="250" alt="four slide">
+                    <img class="d-block w-100" src="./img/Bloque1/imagen6.jpg" width="250" height="250" alt="four slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
