--- a/bloque4.html
+++ b/bloque4.html
@@ -62,25 +62,25 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="img/bloque4/imagen1.jpeg" width="250" height="250"
+                    <img class="d-block w-100" src="./img/Bloque4/imagen1.jpeg" width="250" height="250"
                         alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque4/imagen2.jpeg" width="250" height="250"
+                    <img class="d-block w-100" src="./img/Bloque4/imagen2.jpeg" width="250" height="250"
                         alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque4/imagen3.jpeg" width="250" height="250"
+                    <img class="d-block w-100" src="./img/Bloque4/imagen3.jpeg" width="250" height="250"
                         alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque4/imagen4.jpeg" width="250" height="250" alt="four slide">
+                    <img class="d-block w-100" src="./img/Bloque4/imagen4.jpeg" width="250" height="250" alt="four slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque4/imagen5.jpeg" width="250" height="250" alt="five slide">
+                    <img class="d-block w-100" src="./img/Bloque4/imagen5.jpeg" width="250" height="250" alt="five slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="img/bloque4/imagen6.jpeg" width="250" height="250" alt="four slide">
+                    <img class="d-block w-100" src="./img/Bloque4/imagen6.jpeg" width="250" height="250" alt="four slide">
                 </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
